--- a/angularbasics/src/app/components/databinding/databinding.component.html
+++ b/angularbasics/src/app/components/databinding/databinding.component.html
@@ -27,5 +27,7 @@
 
         </ul>
         <li>Two way data binding</li>
+        <input type="text"  [(ngModel)]="username"/>
+        <h1>{{username}}</h1>
     </ol>
 </div>
