--- a/angularbasics/src/app/components/navbar/navbar.component.html
+++ b/angularbasics/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/input-output">Input and Output</a>
         </li>
+
+          <li class="nav-item">
+          <a class="nav-link" routerLink="/directives">Directives</a>
+        </li>
+
+              <li class="nav-item">
+          <a class="nav-link" routerLink="/pipes">Pipes</a>
+        </li>
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
