--- a/angularbasics/src/app/components/pipe-examples/pipe-examples.component.html
+++ b/angularbasics/src/app/components/pipe-examples/pipe-examples.component.html
@@ -8,3 +8,5 @@
 <p>{{date | date :'fullDate'}}</p>
 <p>{{date | date :'short'}}</p>
 <p>{{date | date :'long'}}</p>
+<p>{{"Nisha" | greeting}}</p>
+<p>{{"ABC" | total :1 :1:2}}</p>
