--- a/angularbasics/src/app/components/navbar/navbar.component.html
+++ b/angularbasics/src/app/components/navbar/navbar.component.html
@@ -31,10 +31,16 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/services">Services</a></li>
+            <li><a class="dropdown-item" routerLink="/component-lifecycle">Component-lifecycle</a></li>
+            <li><a class="dropdown-item" routerLink="/observables">Observables</a></li>
+            <li><a class="dropdown-item" routerLink="/quotes">Quotes</a></li>
+             <li><a class="dropdown-item" routerLink="/products">Products</a></li>
+
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
+          
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
