--- a/angularbasics/src/app/components/navbar/navbar.component.html
+++ b/angularbasics/src/app/components/navbar/navbar.component.html
@@ -35,6 +35,10 @@
             <li><a class="dropdown-item" routerLink="/observables">Observables</a></li>
             <li><a class="dropdown-item" routerLink="/quotes">Quotes</a></li>
              <li><a class="dropdown-item" routerLink="/products">Products</a></li>
+                <li><a class="dropdown-item" routerLink="/form-handling-1">Form Handling 1</a></li>
+                  <li><a class="dropdown-item" routerLink="/form-handling-2">Form Handling 2</a></li>
+
+
 
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
