--- a/angularbasics/src/app/components/service/service.component.html
+++ b/angularbasics/src/app/components/service/service.component.html
@@ -1,4 +1,4 @@
-<p>service works!</p>
+<p>service works! {{id}}</p>
 <div>
     <p *ngFor="let p of products" class="bg-warning m-3 p-2 text-center"> {{p.id}}  {{p.name}}</p>
 </div>
