--- a/angularbasics/src/app/components/product-api/product-api.component.html
+++ b/angularbasics/src/app/components/product-api/product-api.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
   
     <div class="col" *ngFor="let p of products.products">
