--- a/angularbasics/src/app/components/quotes/quotes.component.html
+++ b/angularbasics/src/app/components/quotes/quotes.component.html
@@ -1,3 +1,5 @@
+<h5>{{queryParams |json}}</h5>
+
 <div *ngFor="let q of quotes.quotes">
     <p class="m-3 p-3 bg-warning text-center">{{q.quote}}</p>
     <p class="text-end m-3">-{{q.author}}</p>
